<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:textSize="30sp"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="160dip"
        android:id="@+id/et_input"
        android:background="@drawable/white_bg"
        android:gravity="end|bottom"
        android:layout_row="0"
        android:layout_columnSpan="4"/>

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/clear"
        android:textColor="#FFA500"
        android:id="@+id/btn_clear"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/delete"
        android:id="@+id/btn_delete"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/divide"
        android:id="@+id/btn_divide"
        android:layout_row="1"
        android:layout_column="2"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/multiply"
        android:id="@+id/btn_multiply"
        android:layout_row="1"
        android:layout_column="3"
        android:background="@drawable/white_selector"/>

    <Button
        android:text="@string/seven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/btn_7"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@drawable/white_selector"/>

    <Button
        android:text="@string/eight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/btn_8"
        android:layout_column="1"
        android:layout_row="2"
        android:background="@drawable/white_selector"/>

    <Button
        android:text="@string/nine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/btn_9"
        android:layout_column="2"
        android:layout_row="2"
        android:background="@drawable/white_selector"/>

    <Button
        android:text="@string/minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/btn_minus"
        android:layout_column="3"
        android:layout_row="2"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/four"
        android:id="@+id/btn_4"
        android:layout_row="3"
        android:layout_column="0"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/five"
        android:id="@+id/btn_5"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/six"
        android:id="@+id/btn_6"
        android:layout_column="2"
        android:layout_row="3"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:id="@+id/btn_plus"
        android:layout_column="3"
        android:layout_row="3"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/one"
        android:id="@+id/btn_1"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/two"
        android:id="@+id/btn_2"
        android:layout_column="1"
        android:layout_row="4"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/three"
        android:id="@+id/btn_3"
        android:layout_column="2"
        android:layout_row="4"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="160dp"
        android:text="@string/equal"
        android:id="@+id/btn_equal"
        android:layout_column="3"
        android:layout_rowSpan="2"
        android:background="@drawable/orange_selector"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:id="@+id/btn_0"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@drawable/white_selector"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/point"
        android:id="@+id/btn_point"
        android:layout_column="2"
        android:layout_row="5"
        android:background="@drawable/white_selector"/>
</GridLayout>
